@@ -4,12 +4,12 @@
 DH *get_dh512()
 	{
 	static unsigned char dh512_p[]={
-		0x93,0x6C,0x38,0x09,0x07,0x6C,0xA2,0xAF,0xBC,0x71,0xD8,0xC3,
-		0xA3,0x5E,0xEE,0x36,0xDD,0x5A,0x37,0x4B,0xA8,0x5C,0x45,0x4C,
-		0x7D,0xCD,0xA2,0x8D,0xD2,0xBC,0x24,0x86,0xB4,0xCE,0x21,0xDD,
-		0xE6,0xBD,0x27,0x27,0x7A,0x23,0x03,0xBC,0x7C,0x38,0x9A,0x31,
-		0xED,0xFA,0xA2,0xFC,0x42,0xE0,0x36,0x9E,0x55,0x4E,0x7C,0x8E,
-		0x7A,0xAF,0xE2,0x4B,
+		0xF1,0x4A,0xCC,0xE4,0xD0,0x67,0x76,0xC7,0x26,0x25,0xE2,0x22,
+		0x4B,0x6D,0x8E,0xEB,0x4D,0x24,0xE3,0x7C,0xCE,0x07,0x87,0x24,
+		0x52,0x2D,0xCA,0x42,0x6E,0xF1,0xCB,0xB3,0x27,0xE1,0x0D,0xA4,
+		0xA5,0x8F,0x16,0xD2,0x21,0x96,0xDF,0x3E,0x54,0x7C,0xFA,0xCB,
+		0x1B,0x20,0x3D,0x59,0x1D,0x1F,0x9F,0xA2,0xAA,0x17,0xB1,0x3D,
+		0x67,0xA6,0x2D,0x6B,
 		};
 	static unsigned char dh512_g[]={
 		0x02,
